--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ var life = 3;
 var lifeText;
 var gameoverText;
 		function preload() {
+		//  We need this because the assets are on github pages
+			//  Remove the next 2 lines if running locally
+			this.load.baseURL = 'https://anthidrougani.github.io/Super-Mario/';
+			this.load.crossOrigin = 'anonymous';
 
 			game.load.audio('jump',['audio/jump.wav']);
 			game.load.audio('coin',['audio/coin.wav']);
