--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ var gameoverText;
 		function preload() {
 		//  We need this because the assets are on github pages
 			//  Remove the next 2 lines if running locally
-			this.load.baseURL = 'https://anthidrougani.github.io/Develop/';
+			this.load.baseURL = 'https://anthidrougani.github.io/develop/';
 			this.load.crossOrigin = 'anonymous';
 
 			game.load.audio('jump',['audio/jump.wav']);
