--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE HTML>
+﻿
+<!DOCTYPE HTML>
 <html>
 <head>
     <title>Super-Mario</title>
@@ -15,21 +16,13 @@
 <body>
     <script type="text/javascript">
         var game = new Phaser.Game(256, 240, Phaser.CANVAS);
-
-
         preload = {
-            preload: function () {//  We need this because the assets are on github pages
+            preload: function () {
+                //  We need this because the assets are on github pages
                 //  Remove the next 2 lines if running locally
                 this.load.baseURL = 'https://anthidrougani.github.io/develop/';
                 this.load.crossOrigin = 'anonymous';
 
-                this.load.audio('jump', ['audio/jump.wav']);
-                this.load.audio('coin', ['audio/coin.wav']);
-                this.load.audio('Squish', ['audio/Squish.wav']);
-                this.load.audio('key', ['audio/key.wav']);
-                this.load.audio('fail', ['audio/fail.wav']);
-                this.load.audio('stomp', ['audio/stomp.wav']);
-                this.load.audio('bgm', ['audio/bgm.mp3']);
                 this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
                     16);
                 this.load.spritesheet('bug', 'assets/bug.png', 16, 16);
@@ -40,26 +33,29 @@
                 this.load.spritesheet('mush', 'assets/mush.png', 16, 16);
                 this.load.spritesheet('portal1', 'assets/portal1.png', 16, 16);
                 this.load.spritesheet('portal2', 'assets/portal2.png', 16, 16);
+                this.load.spritesheet('door', 'assets/door.png', 16, 16);
                 this.load.image('back', 'assets/back.png');
                 this.load.image('button1', 'assets/button1.png');
+                this.load.audio('jump', ['audio/jump.wav']);
+                this.load.audio('mush', ['audio/mush.wav']);
+                this.load.audio('coin', ['audio/coin.wav']);
+                this.load.audio('Squish', ['audio/Squish.wav']);
+                this.load.audio('chest', ['audio/chest.wav']);
+                this.load.audio('key', ['audio/key.wav']);
+                this.load.audio('fail', ['audio/fail.wav']);
+                this.load.audio('stomp', ['audio/stomp.wav']);
+                this.load.audio('win', ['audio/win.wav']);
 
-
-
+                this.load.audio('bgm', ['audio/bgm.mp3']);
                 this.load.tilemap('level', 'assets/super_mario_map.json', null,
                     Phaser.Tilemap.TILED_JSON);
-
             }, create: function () {
                 this.game.scale.pageAlignHorizontally = true;
                 this.game.scale.pageAlignVertically = true;
                 this.game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
-
                 game.state.start("menu");
             }
         };
-
-
-
-
         menu = {
             preload: function () {
                 game.load.image("back");
@@ -67,13 +63,13 @@
             },
             create: function () {
                 game.add.tileSprite(0, 0, 256, 240, 'back');
-                game.add.button(0, 0, "button1", this.world1, this);
+                game.add.button(0, 0, "button1", this.level1, this);
                 button.anchor.setTo(0.5, 0.5);
                 button.scale.setTo(1, 1);
-            }, world1: function () {
-                game.state.start('world1');
-            }
 
+            }, level1: function () {
+                game.state.start('level1');
+            }
 
         };
         var score = 0;
@@ -81,19 +77,15 @@
         var life = 3;
         var lifeText;
         var gameoverText;
+        var winText;
 
-        function preload() {//  We need this because the assets are on github pages
+
+        function preload() {
+            //  We need this because the assets are on github pages
             //  Remove the next 2 lines if running locally
             this.load.baseURL = 'https://anthidrougani.github.io/develop/';
             this.load.crossOrigin = 'anonymous';
 
-            this.load.audio('jump', ['audio/jump.wav']);
-            this.load.audio('coin', ['audio/coin.wav']);
-            this.load.audio('Squish', ['audio/Squish.wav']);
-            this.load.audio('key', ['audio/key.wav']);
-            this.load.audio('fail', ['audio/fail.wav']);
-            this.load.audio('stomp', ['audio/stomp.wav']);
-            this.load.audio('bgm', ['audio/bgm.mp3']);
             this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
                 16);
             this.load.spritesheet('bug', 'assets/bug.png', 16, 16);
@@ -103,30 +95,37 @@
             this.load.spritesheet('flower', 'assets/flower.png', 16, 16);
             this.load.spritesheet('mush', 'assets/mush.png', 16, 16);
             this.load.spritesheet('portal1', 'assets/portal1.png', 16, 16);
+            this.load.spritesheet('door', 'assets/door.png', 16, 16);
             this.load.spritesheet('portal2', 'assets/portal2.png', 16, 16);
+            this.load.audio('jump', ['audio/jump.wav']);
+            this.load.audio('coin', ['audio/coin.wav']);
+            this.load.audio('chest', ['audio/chest.wav']);
+            this.load.audio('mush', ['audio/mush.wav']);
+            this.load.audio('Squish', ['audio/Squish.wav']);
+            this.load.audio('key', ['audio/key.wav']);
+            this.load.audio('fail', ['audio/fail.wav']);
+            this.load.audio('stomp', ['audio/stomp.wav']);
+            this.load.audio('win', ['audio/win.wav']);
+            this.load.audio('bgm', ['audio/bgm.mp3']);
             this.load.tilemap('level', 'assets/super_mario_map.json', null,
                 Phaser.Tilemap.TILED_JSON);
-        }
 
-        world1 = {
+
+        }
+        level1 = {
             create: function () {
                 Phaser.Canvas.setImageRenderingCrisp(game.canvas);
                 game.scale.pageAlignHorizontally = true;
                 game.scale.pageAlignVertically = true;
                 game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
                 game.physics.startSystem(Phaser.Physics.ARCADE);
-
                 game.stage.backgroundColor = '#aaaaff';
-
                 map = game.add.tilemap('level');
                 map.addTilesetImage('tiles', 'tiles');
-                map.setCollisionBetween(24, 96, true, 'solid');
-
+                map.setCollisionBetween(11, 44, true, 'solid');
                 map.createLayer('background');
-
                 layer = map.createLayer('solid');
                 layer.resizeWorld();
-
                 coins = game.add.group();
                 coins.enableBody = true;
                 map.createFromTiles(2, null, 'coin', 'stuff', coins);
@@ -139,35 +138,33 @@
                 flowers.callAll('animations.add', 'animations', 'spin',
                     [0, 0, 1, 2, 3], 4, true);
                 flowers.callAll('animations.play', 'animations', 'spin');
-
                 mushs = game.add.group();
                 mushs.enableBody = true;
                 map.createFromTiles(5, null, 'mush', 'stuff', mushs);
                 mushs.callAll('animations.add', 'animations', 'spin',
                     [0, 0, 1, 2], 2, true);
                 mushs.callAll('animations.play', 'animations', 'spin');
-
                 portal1 = game.add.sprite(1470, game.world.height - 224, 'portal1');
                 game.physics.arcade.enable(portal1);
                 portal1.body.gravity.y = 0;
                 portal1.enableBody = true;
-
                 portal1.animations.add('spin',
-
-
-
                     [0, 0, 1], 2, true);
                 portal1.animations.play('spin');
-
                 portal2 = game.add.sprite(1585, game.world.height - 208, 'portal2');
                 game.physics.arcade.enable(portal2);
                 portal2.body.gravity.y = 0;
                 portal2.enableBody = true;
-
                 portal2.animations.add('spin',
                     [0, 0, 1], 2, true);
                 portal2.animations.play('spin');
-
+                door = game.add.sprite(1990, game.world.height - 180, 'door');
+                game.physics.arcade.enable(door);
+                door.body.gravity.y = 0;
+                door.enableBody = true;
+                door.animations.add('spin',
+                    [0, 0, 1, 2, 3, 4,], 4, true);
+                door.animations.play('spin');
                 goombas = game.add.group();
                 goombas.enableBody = true;
                 map.createFromTiles(1, null, 'goomba', 'stuff', goombas);
@@ -177,7 +174,6 @@
                 goombas.setAll('body.bounce.x', 1);
                 goombas.setAll('body.velocity.x', -20);
                 goombas.setAll('body.gravity.y', 500);
-
                 bugs = game.add.group();
                 bugs.enableBody = true;
                 map.createFromTiles(4, null, 'bug', 'stuff', bugs);
@@ -187,8 +183,6 @@
                 bugs.setAll('body.bounce.x', 1);
                 bugs.setAll('body.velocity.x', -20);
                 bugs.setAll('body.gravity.y', 500);
-
-
                 player = game.add.sprite(16, game.world.height - 48, 'mario');
                 game.physics.arcade.enable(player);
                 player.body.gravity.y = 370;
@@ -196,29 +190,31 @@
                 player.animations.add('walkRight', [1, 2, 3], 10, true);
                 player.animations.add('walkLeft', [8, 9, 10], 10, true);
                 player.goesRight = true;
-
                 game.camera.follow(player);
                 var snd = game.add.audio("bgm");
                 snd.play();
-
                 cursors = game.input.keyboard.createCursorKeys();
                 scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '16px', fill: '#000' });
                 scoreText.fixedToCamera = true;
                 lifeText = game.add.text(16, 30, 'life: 3', { fontSize: '16px', fill: '#000' });
                 lifeText.fixedToCamera = true;
-            },
+                winText = game.add.text(1850, 40, "World 1 Completed!", { font: "16px ", fill: "#000" });
 
+
+            },
             update: function () {
+            winText.text = "World 1 Completed!";
                 game.physics.arcade.collide(player, layer);
                 game.physics.arcade.collide(goombas, layer);
-                game.physics.arcade.overlap(player, goombas, goombaOverlap);
+                game.physics.arcade.overlap(player, goombas, this.goombaOverlap);
                 game.physics.arcade.collide(bugs, layer);
-                game.physics.arcade.overlap(player, bugs, bugOverlap);
-                game.physics.arcade.overlap(player, coins, coinOverlap);
-                game.physics.arcade.overlap(player, flowers, flowerOverlap);
-                game.physics.arcade.overlap(player, mushs, mushOverlap);
-                game.physics.arcade.overlap(player, portal1, portal1Overlap);
-                game.physics.arcade.overlap(player, portal2, portal2Overlap);
+                game.physics.arcade.overlap(player, bugs, this.bugOverlap);
+                game.physics.arcade.overlap(player, coins, this.coinOverlap);
+                game.physics.arcade.overlap(player, flowers, this.flowerOverlap);
+                game.physics.arcade.overlap(player, mushs, this.mushOverlap);
+                game.physics.arcade.overlap(player, portal1, this.portal1Overlap);
+                game.physics.arcade.overlap(player, portal2, this.portal2Overlap);
+                game.physics.arcade.overlap(player, door, this.doorOverlap);
                 if (player.body.enable) {
                     player.body.velocity.x = 0;
                     if (cursors.left.isDown) {
@@ -236,14 +232,12 @@
                         else
                             player.frame = 7;
                     }
-
                     if (cursors.up.isDown && player.body.onFloor()) {
                         var snd = game.add.audio("jump");
                         snd.play();
                         player.body.velocity.y = -190;
                         player.animations.stop();
                     }
-
                     if (player.body.velocity.y != 0) {
                         if (player.goesRight)
                             player.frame = 5;
@@ -252,26 +246,57 @@
                     }
                 }
             },
+            doorOverlap: function (player, door) {
+
+
+                var snd = game.add.audio("win");
+                snd.play();
+
+
+
+                player.animations.play('walkRight');
+                player.body.velocity.y = -190;
+                player.animations.play('walkLeft');
+                player.body.velocity.y = -190;
+                player.animations.play('walkRight');
+                player.body.velocity.y = -190;
+                player.animations.play('walkLeft');
+                player.body.velocity.y = -190;
+                player.animations.play('walkRight'); score += 1000000;
+                scoreText.text = 'Score: ' + score;
+
+                game.time.events.add(Phaser.Timer.SECOND * 12, function () {
+                    door.kill();
+
+
+                    game.state.start("menu");
+
+                });
+            },
             portal1Overlap: function (player, portal1) {
+                var snd = game.add.audio("chest");
+                snd.play();
                 player.body.enable = false;
                 portal1.kill();
-
+                score += 5000;
+                scoreText.text = 'Score: ' + score;
                 game.time.events.add(Phaser.Timer.SECOND, function () {
                     player.body.enable = true;
                     player.reset(1730, 2);
                 });
             },
             portal2Overlap: function (player, portal2) {
+                var snd = game.add.audio("chest");
+                snd.play();
                 player.body.enable = false;
                 portal2.kill();
-
+                score += 5000;
+                scoreText.text = 'Score: ' + score;
                 game.time.events.add(Phaser.Timer.SECOND, function () {
                     player.body.enable = true;
                     player.reset(120, 12);
                 });
             },
-
-
             coinOverlap: function (player, coin) {
                 coin.kill();
                 score += 50;
@@ -285,17 +310,16 @@
                 snd.play();
                 score += 500;
                 scoreText.text = 'Score: ' + score;
-
             },
             mushOverlap: function (player, mush) {
                 mush.kill();
+                var snd = game.add.audio("mush");
+                snd.play();
                 score += 500;
                 scoreText.text = 'Score: ' + score;
                 life++;
                 lifeText.text = 'life: ' + life;
-
             },
-
             goombaOverlap: function (player, goomba) {
                 if (player.body.touching.down) {
                     goomba.animations.stop();
@@ -307,10 +331,7 @@
                         var snd = game.add.audio("Squish");
                         snd.play();
                         score += 100;
-
                         scoreText.text = 'Score: ' + score;
-
-
                     });
                 } else {
                     life--;
@@ -321,17 +342,22 @@
                 } if (life == 0) {
                     player.frame = 6;
                     player.body.enable = false;
-
                     player.animations.stop();
                     var snd = game.add.audio("fail");
                     snd.play();
+
                     game.time.events.add(Phaser.Timer.SECOND * 3, function () {
                         game.paused = true;
+
                         gameoverText = game.add.text(20, 100, 'GAME OVER', { fontSize: '32px', fill: '#000' });
+                        gameoverText.fixedToCamera = true;
+
+
+
+
                     });
                 }
             },
-
             bugOverlap: function (player, bug) {
                 if (player.body.touching.down) {
                     bug.animations.stop();
@@ -343,10 +369,7 @@
                         var snd = game.add.audio("Squish");
                         snd.play();
                         score += 100;
-
                         scoreText.text = 'Score: ' + score;
-
-
                     });
                 } else {
                     life--;
@@ -357,22 +380,23 @@
                 } if (life == 0) {
                     player.frame = 6;
                     player.body.enable = false;
-
                     player.animations.stop();
                     var snd = game.add.audio("fail");
                     snd.play();
-                    game.time.events.add(Phaser.Timer.SECOND * 3, function () {
-                        game.paused = true;
-                        gameoverText = game.add.text(20, 100, 'GAME OVER', { fontSize: '32px', fill: '#000' });
-                    });
+                    game.paused = true;
+                    gameoverText = game.add.text(20, 100, 'GAME OVER', { fontSize: '32px', fill: '#000' });
+                    gameoverText.fixedToCamera = true; ``
+
+
                 }
             }
         };
         game.state.add("preload", preload);
-
         game.state.add("menu", menu);
-        game.state.add("world1", world1);
+        game.state.add("level1", level1);
         game.state.start("preload");
+
     </script>
 </body>
 </html>
+
